Week-9x-Swarm-k8s/k8s/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yolo-backend
  labels:
    app: yolo-backend
spec:
  selector:
    app: yolo-backend
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  type: NodePort
